# AIContextFlow

./: LICENSE  README.md  pyproject.toml
.project/: current_intent.json  decisions.json  ledger.json
AIContextFlow/: cli.py  exporter.py  packer.py  validator.py
AIContextFlow/schemas/: current_intent.schema.json  decisions.schema.json
AIContextFlow/templates/project/.project/: current_intent.json  ledger.json
ai_context_flow/: cli.py  exporter.py  filters.py  packer.py  validator.py
ai_context_flow/schemas/: ledger.schema.json
ai_context_flow/templates/project/docs/adr/: ADR-000-template.md
ai_context_flow/templates/project/docs/spec/: collaboration-spec.md
configs/: export_config.json
docs/adr/: ADR-001-collaboration-contract.md  ADR-002-context-pack-format.md
docs/spec/: copilot-guide.md  design-overview.md  mcp-roadmap.md  project-spec.md
examples/: current_intent.example.json  decisions.example.json  ledger.example.json
