[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicontextflow"
version = "0.1.0"
description = "Project governance + Context Pack generator for long-term human+AI collaboration."
readme = "README.md"
requires-python = ">=3.9"
license = {text="MIT"}

[project.scripts]
aiflow = "ai_context_flow.cli:main"
